<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">
    <Button android:text="@string/start_journey" android:id="@+id/button3" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
	<Button android:id="@+id/button_send" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/send" android:onClick="sendData" />
	<Button android:text="@string/end_journey" android:id="@+id/button4" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
	<Button android:text="@string/request_reservations" android:id="@+id/button1" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
	<Button android:text="@string/request_settings" android:id="@+id/button2" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
	<TextView android:text="TextView" android:id="@+id/textView1" android:layout_width="fill_parent" android:layout_height="fill_parent"></TextView>
	
</LinearLayout>